# raytracer

./: .gitignore  CMakeLists.txt  main.cpp
RT/: Bmpfile.cpp  Bmpfile.h  Common.h  Light.h  Object.h  Point3d.h  PointLight.h  Ray.h  Scene.cpp  Scene.h  Sphere.cpp  Sphere.h  Vector3d.h
